Checkpoint layout - andamento das classes .css

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -18,7 +18,10 @@ header#main-header .header-content {
 header#main-header .header-content h1 {
   width: 8em;
   margin: 0 auto;
+  margin-bottom: 14px;
+  margin-top: 20px;
   font-size: 4em;
+  font-weight: 400;
 }
 
 header#main-header .header-content p {
