--- a/src/pages/Feed.css
+++ b/src/pages/Feed.css
@@ -1,69 +1,45 @@
-section#post-list {
-    width: 100%;
-    max-width: 580px;
-    margin: 0 auto;
-    padding: 0 30px;
+section#tool-list {
+  width: 100%;
+  max-width: 850px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
-section#post-list article {
-    background: #fff;
-    border: 1px solid #ddd;
-    margin-top: 30px;
+section#tool-list ul.root {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+  width: "100%";
+  max-width: 850px;
+  background-color: #fff;
 }
 
-section#post-list article header {
-    padding: 20px;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+section#tool-list ul hr {
+  background-color: #dddddd;
+  width: 100%;
 }
 
-section#post-list article header .user-info {
-    display: flex;
-    flex-direction: column;
+section#tool-list ul li .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-section#post-list article header .user-info span {
-    font-size: 13px;
+section#tool-list ul li .header button {
+  margin-bottom: 14px;
 }
 
-section#post-list article header .user-info span.place {
-    font-size: 11px;
-    color: #666;
-    margin-top: 3px;
+section#tool-list ul li .header .clear-icon {
+  margin-right: 8px;
 }
 
-section#post-list article > img {
-    width: 100%;
+section#tool-list ul li .header button .title {
+  font-size: 2em;
 }
 
-section#post-list article footer {
-    padding: 20px;
-}
-
-section#post-list article footer .actions {
-    margin-bottom: 10px;
-}
-
-section#post-list article footer .actions button {
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-}
-
-section#post-list article footer .actions img {
-    height: 20px;
-    margin-right: 10px;
-}
-
-section#post-list article footer p {
-    font-size: 13px;
-    margin-top: 2px;
-    line-height: 18px;
-}
-
-section#post-list article footer p span {
-    color: #7159c1;
-    display: block;
+section#tool-list ul li p .description p span {
+  color: #3f51b5;
+  display: inline-block;
+  margin-right: 10px;
 }
