--- a/src/pages/Feed.css
+++ b/src/pages/Feed.css
@@ -4,6 +4,43 @@ section#tool-list {
   margin: 0 auto;
   padding: 0 30px;
 }
+
+section#tool-list .grow {
+  flex-grow: 1;
+}
+
+section#tool-list .grow .search {
+  position: relative;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.15);
+  width: auto;
+  margin-right: 10px;
+}
+
+section#tool-list .grow .search:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
+section#tool-list .grow .search-icon {
+  width: 56px;
+  height: 100%;
+  position: absolute;
+  pointer-events: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+section#tool-list .grow .input-root {
+  color: inherit;
+}
+
+section#tool-list .grow .input-input {
+  width: 100%;
+  padding: 8px 8px 8px 56px;
+  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
 section#tool-list .add-button {
   color: #fff;
 }
